# BITP2113_GROUP-PROJECT

./: .gitignore  CMakeLists.txt  employee_data_preview.json  search_ids.txt
src/: main.cpp
src/controllers/: employee_controller.cpp  employee_controller.h  ui_controller.cpp
src/libs/: employee_list.cpp  employee_list.h  linked_list.h  node.h  productive_employee_per_department_list.h  salary_list.cpp  salary_list.h  simple_employee_list.h
src/models/: department_count_model.h  employee_model.cpp  employee_model.h  productive_employee_per_department_model.h  salary_model.cpp  salary_model.h  simple_employee_model.h
src/static/: operation_enum.h
src/utils/: employee_analytics.cpp  employee_analytics.h  searcher.cpp  searcher.h  sorter.cpp  sorter.h
